web-infras/parser/tests/fixtures/babel/es2017/async-functions/invalid-escape-sequence-function/output.txt
[SyntaxError]: Missing semicolon or line terminator. (1,12)
1|\u0061sync function() { await x }
 |          ^
[SyntaxError]: function statement requires a name (1,20)
1|\u0061sync function() { await x }
 |                  ^
[SyntaxError]: Missing semicolon or line terminator. (1,31)
1|\u0061sync function() { await x }
 |                             ^
